--- a/index.html
+++ b/index.html
@@ -43,25 +43,25 @@
                 <a href="#top" onclick=$("#menu-close").click();>Navigation</a>
             </li>
             <li>
-                <a href="#topNav" onclick=$("#menu-close").click();>Home</a>
+                <a href="#Home" onclick=$("#menu-close").click();>Home</a>
             </li>
             <li>
-                <a href="#about" onclick=$("#menu-close").click();>About</a>
+                <a href="#About" onclick=$("#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="#services" onclick=$("#menu-close").click();>Research</a>
+                <a href="#Research" onclick=$("#menu-close").click();>Research</a>
             </li>
             <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Projects</a>
+                <a href="#Projects" onclick=$("#menu-close").click();>Projects</a>
             </li>
             <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Competition</a>
+                <a href="#Competition" onclick=$("#menu-close").click();>Competition</a>
             </li>
             <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Notes</a>
+                <a href="#Notes" onclick=$("#menu-close").click();>Notes</a>
             </li>
             <li>
-                <a href="#contact" onclick=$("#menu-close").click();>Teaching</a>
+                <a href="#Teaching" onclick=$("#menu-close").click();>Teaching</a>
             </li>
         </ul>
     </nav>
