--- a/index.html
+++ b/index.html
@@ -56,11 +56,35 @@
 	 -->
     <div id="top" class="pageHeader">
         <div class="headerText">
-            
-            <h1><b>Ryan Lau</b></h1>
+            <h1><b>Lau Pak To (Ryan)</b></h1>
             <h2>Bsc Natural Sciences Student</h2>
         </div>
     </div>
+    <td width="150" valign="top" height="580"></a>
+        <img src="Prof pic crop.jpg" width="140" height="162" hspace="10" vspace="10" />
+        <table border="0" cellspacing="0" cellpadding="0" width="175" id="navigation">
+          <tr>
+            <td width="140" height="30"><a href="index.html">Home</a></td>
+          </tr>
+          <tr>
+            <td width="140" height="30"><a href="about.html">About</a></td>
+          </tr>
+          <tr>
+            <td width="140" height="30"><a href="research.html">Research</a></td>
+          </tr>
+          <tr>
+            <td width="140" height="30"><a href="competition.html">Competition</a></td>
+          </tr>
+          <tr>
+            <td width="140" height="30"><a href="projects.html">Projects</a></td>
+          </tr>
+          <tr>
+            <td width="140" height="30"><a href="notes.html">Notes</a></td>
+          </tr>
+          <tr>
+            <td width="140" height="30"><a href="teaching.html">Teaching & Tutoring</a></td>
+          </tr>
+      </table>	</td>
 
     <section id="about" class="about">
         <div class="container">
