--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
     <!-- <link rel="shortcut icon" type="image/png" href="add savitar logo"> -->
 	<!-- create own stylesheet -->
     <link href="savystyle.css" rel="stylesheet"> 
-    <!-- <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet"> -->
-
 </head>
 
 <body>
@@ -103,7 +99,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Short CV</h2>
+                    <h2>Brief CV</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
