--- a/index.html
+++ b/index.html
@@ -54,31 +54,32 @@
         <div class="headerText">
             <h1><b>Lau Pak To (Ryan)</b></h1>
             <h2>Bsc Natural Sciences Student</h2>
+            <h3>Major: Physics, Minor:Physical Chemistry</h3>
         </div>
     </div>
-    <td width="150" valign="top" height="580"></a>
-        <img src="Prof pic crop.jpg" width="140" height="162" hspace="10" vspace="10" />
-        <table border="0" cellspacing="0" cellpadding="0" width="175" id="navigation">
+    <td width="130" valign="top" height="580"></a>
+        <img src="Prof pic crop.jpg" width="180" height="210" hspace="0" vspace="0" />
+        <table border="1" cellspacing="0" cellpadding="0" width="175" id="navigation">
           <tr>
-            <td width="140" height="30"><a href="index.html">Home</a></td>
+            <td width="14" height="30"><a href="index.html">Home</a></td>
           </tr>
           <tr>
-            <td width="140" height="30"><a href="about.html">About</a></td>
+            <td width="14" height="30"><a href="about.html">About</a></td>
           </tr>
           <tr>
-            <td width="140" height="30"><a href="research.html">Research</a></td>
+            <td width="14" height="30"><a href="research.html">Research</a></td>
           </tr>
           <tr>
-            <td width="140" height="30"><a href="competition.html">Competition</a></td>
+            <td width="14" height="30"><a href="competition.html">Competition</a></td>
           </tr>
           <tr>
-            <td width="140" height="30"><a href="projects.html">Projects</a></td>
+            <td width="14" height="30"><a href="projects.html">Projects</a></td>
           </tr>
           <tr>
-            <td width="140" height="30"><a href="notes.html">Notes</a></td>
+            <td width="14" height="30"><a href="notes.html">Notes</a></td>
           </tr>
           <tr>
-            <td width="140" height="30"><a href="teaching.html">Teaching & Tutoring</a></td>
+            <td width="14" height="30"><a href="teaching.html">Teaching & Tutoring</a></td>
           </tr>
       </table>	</td>
 
