--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Ryan Lau">
 	
-    <title>Ryan Lau - Home</title>
+    <title>Ryan Lau - Projects</title>
 
     <!-- <link rel="shortcut icon" type="image/png" href="add savitar logo"> -->
 	<!-- create own stylesheet -->
