choose a flippin font

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- <link rel="shortcut icon" type="image/png" href="add savitar logo"> -->
 	<!-- create own stylesheet -->
+    <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet'>
     <link href="savystyle.css" rel="stylesheet"> 
 </head>
 <style>
@@ -22,8 +23,8 @@
 <body>
 
 
-<div >
-    <h1><b>Lau Pak To (Ryan)</b></h1>
+<div>
+    <h1><b><span class='notbold'>Lau Pak To (Ryan)</span></b></h1>
     <h2>Bsc Natural Sciences Student </h2>
     <!-- add image or banner or sth -->
     <!-- <h3>Major: Physics, Minor:Physical Chemistry</h3> -->
