get the podcast docs

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <br />
                     <strong>Projects</strong>
                     <p> <br />
-                        quantum drug design, LAMMPS guides and modelling, ML stock market, Bird Song Project, 
+                        quantum drug design, LAMMPS guides and modelling, ML stock market, Bird Song Project, Podcast on Exoplanets
                     </p>
             </td> 
     </table>  
