check pdf and qm webpage

--- a/notes.html
+++ b/notes.html
@@ -131,7 +131,7 @@
                             <p class = "bodytxt"> 
                                 <u>Physics</u>: 
                                 <br />
-                                Quantum Physics (PHAS 0022)
+                                <a href = "notes_2_phy_QM.html">Quantum Physics (PHAS 0022)</a>
                                 <br />
                                 Electricity & Magnetism (PHAS 0021)
                                 <br />
@@ -147,17 +147,17 @@
                 <td valign="top"> 
                     <table width="400" height="auto" valign="top" border="0">
                             <p class = "bodytxt"> 
-                                <u> Physical Chemistry (CHEM0019)</u>:
+                                <u> <a href="C:\SavitarRL.github.io\Notes\Year 2\Chem\chem cheatsheets.pdf">Physical Chemistry (CHEM0019)</a></u>:
                                 <br />
-                                - Quantum Mechanics
+                                - <a href="C:\SavitarRL.github.io\Notes\Year 2\Chem\QM chem notes.pdf">Quantum Mechanics </a>
                                 <br />
-                                - Spectroscopy
+                                - <a href="C:\SavitarRL.github.io\Notes\Year 2\Chem\spec chem notes.pdf">Spectroscopy</a>
                                 <br />
-                                - Statistical Mechanics
+                                - <a href="C:\SavitarRL.github.io\Notes\Year 2\Chem\stat mech main.pdf">Statistical Mechanics</a>
                                 <br />
-                                - Thermodynamics
+                                - <a href="C:\SavitarRL.github.io\Notes\Year 2\Chem\thermo main.pdf">Thermodynamics</a> 
                                 <br />
-                                - Kinetics
+                                - <a href="C:\SavitarRL.github.io\Notes\Year 2\Chem\kinetics main.pdf">Kinetics</a> 
                                 <br /><br />
                                 <u> Chemical Dynamics (CHEM 0021)</u>
                             </p>
