double check pdfs, html ok

--- a/notes.html
+++ b/notes.html
@@ -147,17 +147,17 @@
                 <td valign="top"> 
                     <table width="400" height="auto" valign="top" border="0">
                             <p class = "bodytxt"> 
-                                <u> <a href="C:\SavitarRL.github.io\Notes\Year 2\Chem\chem cheatsheets.pdf">Physical Chemistry (CHEM0019)</a></u>:
+                                <u> <a href="./Notes/Year 2/Chem/chem cheatsheets.pdf">Physical Chemistry (CHEM0019)</a></u>:
                                 <br />
-                                - <a href="C:\SavitarRL.github.io\Notes\Year 2\Chem\QM chem notes.pdf">Quantum Mechanics </a>
+                                - <a href="./Notes/Year 2/Chem/QM chem notes.pdf">Quantum Mechanics </a>
                                 <br />
-                                - <a href="C:\SavitarRL.github.io\Notes\Year 2\Chem\spec chem notes.pdf">Spectroscopy</a>
+                                - <a href="./Notes/Year 2/Chem/spec chem notes.pdf">Spectroscopy</a>
                                 <br />
-                                - <a href="C:\SavitarRL.github.io\Notes\Year 2\Chem\stat mech main.pdf">Statistical Mechanics</a>
+                                - <a href="./Notes/Year 2/Chem/stat mech main.pdf">Statistical Mechanics</a>
                                 <br />
-                                - <a href="C:\SavitarRL.github.io\Notes\Year 2\Chem\thermo main.pdf">Thermodynamics</a> 
+                                - <a href="./Notes/Year 2/Chem/thermo main.pdf">Thermodynamics</a> 
                                 <br />
-                                - <a href="C:\SavitarRL.github.io\Notes\Year 2\Chem\kinetics main.pdf">Kinetics</a> 
+                                - <a href="./Notes/Year 2/Chem/kinetics main.pdf">Kinetics</a> 
                                 <br /><br />
                                 <u> Chemical Dynamics (CHEM 0021)</u>
                             </p>
