--- a/notes_2_phy_QM.html
+++ b/notes_2_phy_QM.html
@@ -77,8 +77,8 @@
             <p>
                 <br />
                 <ul>
-                    <li><a href = "C:\SavitarRL.github.io\Notes\Year 2\Physics\QM_notes_all.pdf" > Notes </a> (With some summer study notes)</li>
-                    <li><a href = "C:\SavitarRL.github.io\Notes\Year 2\Physics\Quantum_Mech_Year_2_cheatsheet.pdf" > Cheatsheet & Summary </a></li>
+                    <li><a href = "./Notes/Year 2/Physics/QM_notes_all.pdf" > Notes </a> (With some summer study notes)</li>
+                    <li><a href = "./Notes/Year 2/Physics/Quantum_Mech_Year_2_cheatsheet.pdf" > Cheatsheet & Summary </a></li>
                   </ul>  
             </p>                  
         </table>  
