year 2 notes almost done

--- a/notes.html
+++ b/notes.html
@@ -146,20 +146,11 @@
                 
                 <td valign="top"> 
                     <table width="400" height="auto" valign="top" border="0">
+                        <br />
                             <p class = "bodytxt"> 
-                                <u> <a href="./Notes/Year 2/Chem/chem cheatsheets.pdf">Physical Chemistry (CHEM0019)</a></u>:
-                                <br />
-                                - <a href="./Notes/Year 2/Chem/QM chem notes.pdf">Quantum Mechanics </a>
-                                <br />
-                                - <a href="./Notes/Year 2/Chem/spec chem notes.pdf">Spectroscopy</a>
-                                <br />
-                                - <a href="./Notes/Year 2/Chem/stat mech main.pdf">Statistical Mechanics</a>
-                                <br />
-                                - <a href="./Notes/Year 2/Chem/thermo main.pdf">Thermodynamics</a> 
-                                <br />
-                                - <a href="./Notes/Year 2/Chem/kinetics main.pdf">Kinetics</a> 
+                                <u> <a href="notes_2_chem.html">Physical Chemistry (CHEM0019)</a></u>
                                 <br /><br />
-                                <u> Chemical Dynamics (CHEM 0021)</u>
+                                <u><a href="notes_2_dyn_chem.html">Chemical Dynamics (CHEM 0021)</a></u>
                             </p>
                     </table> <br />
                 </td >  
