--- a/notes_2_chem.html
+++ b/notes_2_chem.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Ryan Lau">
 	
-    <title>Ryan Lau - Notes (Thermo & Material)</title>
+    <title>Ryan Lau - Notes (P.Chem)</title>
 
     <!-- <link rel="shortcut icon" type="image/png" href="add savitar logo"> -->
 	<!-- create own stylesheet -->
@@ -72,16 +72,34 @@
 
     <td valign="top">
         <table width="900" border="0" hspace = "10" cellpadding="0" cellspacing="0" bgcolor="#EEF5FD">
-            <h2>Thermal Physics & the Properties of Matter (PHAS 0006)</h2> 
-            <u>Lecturers: </u> </br>
-            <a href="https://www.ucl.ac.uk/physics-astronomy/people/professor-peter-barker"> Professor Peter Barker</a> </br>
-            <a href="https://www.ucl.ac.uk/physics-astronomy/people/dr-chris-howard"> Professor Chris Howard</a>
+            <h2>Physical Chemistry (CHEM 0019)</h2> 
+            Notes:
             <p>
                 <br />
                 <ul>
-                    <li><a href = "./Notes/Year 1/Physics/phy termo year 1.pdf" > Notes </a></li>
+                    <li> <a href="./Notes/Year 2/Chem/chem cheatsheets.pdf">Cheatsheet</a></li>
+                    <br />
+                    <li> <a href="./Notes/Year 2/Chem/QM chem notes.pdf">Quantum Mechanics </a></li> 
+                    Lecturer: <a href="http://www.cposs.org.uk/"> Prof Sally Price</a> <br />
+                    <br />
+                    <li><a href="./Notes/Year 2/Chem/spec chem notes.pdf">Spectroscopy</a> </li>
+                    Lecturer: <a href="http://helenfieldinggroup.co.uk/"> Prof Helen Fielding</a> <br />
+                    <br />
+                    <li> <a href="./Notes/Year 2/Chem/stat mech main.pdf">Statistical Mechanics</a></li>
+                    Lecturer: <a href="https://www.ucl.ac.uk/chemistry/people/katherine-holt"> Prof Katherine Holt</a> <br />
+                    <br />
+                    <li> <a href="./Notes/Year 2/Chem/thermo main.pdf">Thermodynamics</a> </li>
+                    Lecturer: <a href="https://www.ucl.ac.uk/chemistry/people/giorgio-volpe"> Dr. Giorgio Volpe</a> <br />
+                    <br />
+                    <li> <a href="./Notes/Year 2/Chem/kinetics main.pdf">Kinetics</a> </li>
+                    Lecturer: <a href="https://www.ucl.ac.uk/chemistry/people/david-rowley/"> Dr. David Rowley</a> <br />
+                    <br />
+                    <li>Experimental Chemsitry (no notes, just reports, which will be updated in the following weeks)</li>
+                    Lecturer: <a href="https://www.ucl.ac.uk/chemistry/people/vicky-hilborne"> Dr. Vicky Hilborne</a> <br /><br />
+                    <ul>
 
-                  </ul>  
+                    </ul>
+                </ul>  
             </p>                  
         </table>  
     </td>  
