--- a/notes_2_phy_QM.html
+++ b/notes_2_phy_QM.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Ryan Lau">
 	
-    <title>Ryan Lau - Notes</title>
+    <title>Ryan Lau - Notes (QM Yr2)</title>
 
     <!-- <link rel="shortcut icon" type="image/png" href="add savitar logo"> -->
 	<!-- create own stylesheet -->
