--- a/notes.html
+++ b/notes.html
@@ -133,13 +133,13 @@
                                 <br />
                                 <a href = "notes_2_phy_QM.html">Quantum Physics (PHAS 0022)</a>
                                 <br />
-                                Electricity & Magnetism (PHAS 0021)
+                                <a href="notes_2_phy_EM.html">Electricity & Magnetism (PHAS 0021) </a>
                                 <br />
-                                Atomic & Molecular Physics (PHAS 0023)
+                                <a href = "notes_2_phy_AM.html"> Atomic & Molecular Physics (PHAS 0023)</a>
                                 <br /><br />
                                 <u>Mathematics </u>: 
                                 <br />
-                                Mathematical Methods III (PHAS 0025)
+                                <a href = "notes_2_phy_MM3.html">Mathematical Methods III (PHAS 0025)</a>
                             </p>
                     </table><br />
                 </td >  
@@ -169,13 +169,13 @@
                                     <br />
                                     Modern Physics, Astronomy & Cosmology (PHAS 0011)
                                     <br />
-                                    Thermal Physics & the Properties of Matter (PHAS 0009)
+                                    <a href = "notes_1_phy_thermal.html">Thermal Physics & the Properties of Matter (PHAS 0009)</a>
                                     <br /><br />
                                     <u>Mathematics</u>:
                                     <br />
                                     Mathematics for Natural Sciences (NSCI 0005)
                                     <br />
-                                    Mathematical Methods II (PHAS 0009)
+                                    <a href="notes_1_phy_mm2.html">Mathematical Methods II (PHAS 0009)</a>
                                 </p><br />
 
                         </table>
