update research section

--- a/notes.html
+++ b/notes.html
@@ -61,17 +61,15 @@
         <footer>
             <div>
                 <h5><strong>contact</strong></h5>
-                <li> <a href="mailto:ryanlaupakto2000@gmail.com">ryanlaupakto2000@gmail.com</a></li>
-                <li>
-                    <a href="mailto:zcqsptl@ucl.ac.uk">zcqsptl@ucl.ac.uk</a>
-                </li>                        
-                </ul>
+                <a href="mailto:ryanlaupakto2000@gmail.com"><img src="./Pics/Gmail-Logo-700x394.png" alt="gmail" width="48" height="30"></a>
+                
+                <a href="mailto:zcqsptl@ucl.ac.uk"><img src="./Pics/Microsoft_Outlook-Logo.wine.png" alt="outlook" width="32" height="30"></a>      
             </div>
         </footer>	
     </td>
 
     <td valign="top">
-    <table width="900" border="1" hspace = "10" cellpadding="0" cellspacing="0" bgcolor="#EEF5FD">
+    <table width="900" border="0" hspace = "10" cellpadding="0" cellspacing="0" bgcolor="#EEF5FD">
         <h2>Notes</h2> 
             <p>
                 To preface: These notes are made for personal use and studying. These notes might mirror the lecture notes or some books I have read, so there will be some similarites. 
@@ -167,7 +165,7 @@
                                 <p class = "bodytxt"> 
                                     <u>Physics</u>:
                                     <br />
-                                    Modern Physics, Astronomy & Cosmology (PHAS 0011)
+                                    <a href = "notes_1_phy_astro.html">Modern Physics, Astronomy & Cosmology (PHAS 0011)</a> 
                                     <br />
                                     <a href = "notes_1_phy_thermal.html">Thermal Physics & the Properties of Matter (PHAS 0009)</a>
                                     <br /><br />
@@ -186,8 +184,8 @@
                                 <br />
                                 <p class = "bodytxt"> 
                                     <u>Chemistry</u>:
-                                    <br />
-                                    Chemical Foundations (CHEM 0005)
+                                    <!-- <br />
+                                    Chemical Foundations (CHEM 0005) -->
                                     <br />
                                     Basic Physical Chemistry (CHEM 0009)
                                     <br />
@@ -201,10 +199,10 @@
                         <tr>
                         <td> 
                             <table width="400" height="auto" border="0">
-                                    <strong>A-levels & HKDSE syllibus</strong> (Sep 2014 - Jun 2019)
+                                    <strong>A-levels & HKDSE syllabus</strong> (Sep 2014 - Jun 2019)
                                     <br />
                                     <p class = "bodytxt"> 
-                                        Physics (together with Year 1 Astrophysics & Cosmology)
+                                        <a href="./Notes/Alevel/alvl plus yr1 astro phy.pdf"> Physics (together with Year 1 Astrophysics & Cosmology)</a>
                                         <br />
                                         Chemistry
                                         <br />
