--- a/notes_2_phy_MM3.html
+++ b/notes_2_phy_MM3.html
@@ -61,11 +61,10 @@
         <footer>
             <div>
                 <h5><strong>contact</strong></h5>
-                <li> <a href="mailto:ryanlaupakto2000@gmail.com">ryanlaupakto2000@gmail.com</a></li>
-                <li>
-                    <a href="mailto:zcqsptl@ucl.ac.uk">zcqsptl@ucl.ac.uk</a>
-                </li>                        
-                </ul>
+                <a href="mailto:ryanlaupakto2000@gmail.com"><img src="./Pics/Gmail-Logo-700x394.png" alt="gmail" width="48" height="30"></a>
+                
+                <a href="mailto:zcqsptl@ucl.ac.uk"><img src="./Pics/Microsoft_Outlook-Logo.wine.png" alt="outlook" width="32" height="30"></a>
+                               
             </div>
         </footer>	
     </td>
