--- a/notes_2_chem.html
+++ b/notes_2_chem.html
@@ -61,11 +61,9 @@
         <footer>
             <div>
                 <h5><strong>contact</strong></h5>
-                <li> <a href="mailto:ryanlaupakto2000@gmail.com">ryanlaupakto2000@gmail.com</a></li>
-                <li>
-                    <a href="mailto:zcqsptl@ucl.ac.uk">zcqsptl@ucl.ac.uk</a>
-                </li>                        
-                </ul>
+                <a href="mailto:ryanlaupakto2000@gmail.com"><img src="./Pics/Gmail-Logo-700x394.png" alt="gmail" width="48" height="30"></a>
+                
+                <a href="mailto:zcqsptl@ucl.ac.uk"><img src="./Pics/Microsoft_Outlook-Logo.wine.png" alt="outlook" width="32" height="30"></a>
             </div>
         </footer>	
     </td>
@@ -94,8 +92,14 @@
                     <li> <a href="./Notes/Year 2/Chem/kinetics main.pdf">Kinetics</a> </li>
                     Lecturer: <a href="https://www.ucl.ac.uk/chemistry/people/david-rowley/"> Dr. David Rowley</a> <br />
                     <br />
-                    <li>Experimental Chemsitry (no notes, just reports, which will be updated in the following weeks)</li>
-                    Lecturer: <a href="https://www.ucl.ac.uk/chemistry/people/vicky-hilborne"> Dr. Vicky Hilborne</a> <br /><br />
+                    <li>Experimental Chemsitry </li>
+                    Lecturer: <a href="https://www.ucl.ac.uk/chemistry/people/vicky-hilborne"> Dr. Vicky Hilborne</a> <br />
+                    - Huckel Theory <br />
+                    - Kinetics of the reaction of methylene blue with ascorbic acid
+                     <br />
+                    - Thermodynamics of binary liquid mixtures
+                    <br />
+                    <br /><br />
                     <ul>
 
                     </ul>
