continue on project section

--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Ryan Lau">
 	
-    <title>Ryan Lau - Research</title>
+    <title>Ryan Lau - Projects</title>
 
     <!-- <link rel="shortcut icon" type="image/png" href="add savitar logo"> -->
 	<!-- create own stylesheet -->
@@ -72,7 +72,7 @@
     <table width="800" border="0" hspace = "10" cellpadding="0" cellspacing="0" bgcolor="#EEF5FD">
         <h2>Research</h2> 
             <p>
-                A space to share what I have done for my research work :>
+                A space to share what projects I have done :>
             </p>
         
         <td> 
@@ -82,19 +82,23 @@
             <tr>
             <td valign="top"> 
                 <table width="900" height="auto" border="0">
-                        <h3>Topological Phase Transition in S=1/2 spin chains with alternating ferromagnetic (FM) and antiferromagnetic (AFM) couplings and exchange anisotropy</h3> 
+                        <h3>Bird Song Audio Signal Analysis</h3> 
                         <br />
-                        A summer research project on theoretical condensed matter physics, as a part of the <a href="https://www.ucl.ac.uk/condensed-matter-material-physics/research-projects"> UCL CMMP Brian Duff Summer Studentship</a>
+                        A computing project as a part of my Natural Sciences scientific computing course</a>
                         <p style="text-align:center;"><img src="./Research/qTPT/modelDef.PNG" alt="qtpt model" width = 55% ></p>
                         <p class = "bodytxt"> 
-                            Supervisor: <a href="http://www.homepages.ucl.ac.uk/~ucanfkr/index.html"> Dr. Frank Kruger</a> </br></br>
+                            Supervisor: Dr. Peter Bratby </br></br>
                            
-                            Abstract:</br> A 1D S=1/2 spin chain with alternating FM and AFM couplings is investigated. The topological phase boundary is
-                            determined as a function of the relative strength of the exchange coupling and the magnetic exchange anisotropy. In
-                            the regime where FM coupling dominates, it becomes a Haldane spin chain, exhibiting topological order, hence will be
-                            stable against small perturbations. Interactions of this regime is treated in a mean-field approximation, requiring to solve
-                            coupled self-consistency equations numerically using Python and Mathematica. In the limit of strong anisotropy, the
-                            fermions will be non-interacting and is exactly solvable.
+                            Brief overview:</br> Our team aimed to identify different bird species by performing Fourier Transforms (FT) on bird song audios
+                            by comparing the birds' dominant, minumum, maximum and average frequency.
+                            The frequency data that we were able to extract from the bird songs was not extensive enough to 
+                            consistently identify birds. Our database of birdsongs can be extended and refined in the future to overcome the complications and accquire more reliable data. 
+                            A Principle Component Analysis (PCA) can be a potential method for identifying bird species by vocalisation in the future.
+                        </br>Python and Jupyter Notebooks are used throughout the project, collaborating our works using CoCalc. You can see the final report by
+                        clicking <a href="https://github.com/SavitarRL/NatSci-Computing/blob/master/Group%20Project/NSCI0007_Group_Project/Final%20Report%20Bird%20Song.ipynb">here</a>.
+                        </br>
+                        </br></br>
+                        Credits: Louis Sharma, Nial Turner, Will Lowerie, Hannah Galbraith, Ryan Lau
                         </br></br>
                         <!-- See Report</br>
                         See Detailed Appendix</br>
@@ -110,9 +114,9 @@
                 <tr>
                     <td valign="top"> 
                         <table width="900" height="auto" border="0">
-                                <h3>The 3-Coloured Distributive Consensus Problem</h3> 
+                                <h3>Molecular and Business Modelling</h3> 
                                 <br />
-                                A summer research project on Cellular Automata, as a part of the <a href="https://www.wolframphysics.org/">"Wolfram Physics Project</a> and <a href="https://education.wolfram.com/summer-school/programs/physics/">Wolfram Summer School: Fundamental Physics Track 2021</a>.
+                                A summer project on LAMMPS, as a part of the NatSci Innovation Lab 2020.
                                 <p style="text-align:center;"><img src="./Research/3 color/main.PNG" alt="3col model" width = 450 height=150 ><img src="./Research/3 color/main2.PNG" alt="3col model2" width = 450 height=150 ></p>
                                 <p class = "bodytxt"> 
                                     Supervisor: <a href="https://www.wolframphysics.org/people/hatem-elshatlawy/">Hatem Elshatlawy</a> </br></br>    
