--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@
                             by comparing the birds' dominant, minumum, maximum and average frequency.
                             The frequency data that we were able to extract from the bird songs was not extensive enough to 
                             consistently identify birds. Our database of birdsongs can be extended and refined in the future to overcome the complications and accquire more reliable data. 
-                            A Principle Component Analysis (PCA) can be a potential method for identifying bird species by vocalisation in the future.
+                            A preliminary trial using a Principle Component Analysis (PCA) was performed, and could be a potential method for identifying bird species by vocalisation in the future.
                         </br>Python and Jupyter Notebooks are used throughout the project, collaborating our works using CoCalc. You can see the final report by
                         clicking <a href="https://github.com/SavitarRL/NatSci-Computing/blob/master/Group%20Project/NSCI0007_Group_Project/Final%20Report%20Bird%20Song.ipynb">here</a>.
                         </br>
@@ -119,12 +119,16 @@
                                 <p class = "bodytxt"> 
                                 </br>      
                                 Brief overview:</br>
-                                We wanted to create an introductory course in molecular modelling and simulation using <a href="https://www.lammps.org/">LAMMPS</a>. 
-                        
+                                We wanted to create an introductory course in molecular modelling and simulation using <a href="https://www.lammps.org/">LAMMPS</a>.
+                                The highlight of our project is the simulation of the COVID-19 drug Remdesivir and its molecular dynamics with the human cell membrane (huge thanks to Lukas).
+                                We have made a <a href="https://mminnovationlab2020.blogspot.com/">blog</a>, detailing what we have found and done, with many useful documents.
+                                The overall <a href="./Projects/Innovation_Lab_2020_Report_Final_Version.pdf">report</a> pretty well summaries what the project is about.
+
                             </br>
                             Some documents I contributed to the project:</br>
                             - <a href="./Projects/lammps_guide.pdf">Installation guide for LAMMPS and other applications</a></br>
                             - <a href="./Projects/lammps_applications.pdf">A review of the different applications of LAMMPS</a></br>
+                            - <a href="./Projects/Pre- and post-processing tools for LAMMPS.pdf">Pre & Post processing tools for LAMMPS</a></br>
                             - <a href="./Projects/lammps_errors.pdf">Errors and troubleshooting in LAMMPS </a></br>
                         </br></br>
                         Credits: Marcel Mordarski, Ryan Lau, Lukas Supragonas, Maja Walnik
