start top banner and about page

--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
             <td width="14" height="30"><a href="publications.html">Publications</a></td>
             </tr> -->
             <tr>
-            <td width="14" height="30"><a href="competition.html">Competition</a></td>
+            <td width="14" height="30"><a href="competition.html">Competitions</a></td>
             </tr>
             <tr>
             <td width="14" height="30"><a href="projects.html">Projects</a></td>
@@ -54,9 +54,9 @@
             <tr>
             <td width="14" height="30"><a href="notes.html">Notes</a></td>
             </tr>
-            <tr>
+            <!-- <tr>
             <td width="14" height="30"><a href="teaching.html">Teaching & Tutoring</a></td>
-            </tr>
+            </tr> -->
         </table>
         <footer>
             <div>
@@ -70,7 +70,7 @@
 
     <td valign="top">
     <table width="800" border="0" hspace = "10" cellpadding="0" cellspacing="0" bgcolor="#EEF5FD">
-        <h2>Research</h2> 
+        <h2>Projects</h2> 
             <p>
                 A space to share what projects I have done :>
             </p>
@@ -84,7 +84,7 @@
                 <table width="900" height="auto" border="0">
                         <h3>Bird Song Audio Signal Analysis</h3> 
                         <br />
-                        A computing project as a part of my Natural Sciences scientific computing course</a>
+                        A programming research project as a part of my Natural Sciences scientific computing course</a></br></br>
                         <p style="text-align:center;"><img src="./Projects/20210916_171908.jpg" alt="birds by koufu" width = 45% ></p>
                         <p class = "bodytxt"> 
                             Supervisor: Dr. Peter Bratby </br></br>
@@ -119,11 +119,10 @@
                                 <p class = "bodytxt"> 
                                 </br>      
                                 Brief overview:</br>
-                                We wanted to create an introductory course in molecular modelling and simulation using <a href="https://www.lammps.org/">LAMMPS</a>.
+                                We wanted to create an introductory course in molecular modelling and simulation using <a href="https://www.lammps.org/">LAMMPS</a>, with some methods in business modelling, such as supply chain analystics using Python.
                                 The highlight of our project is the simulation of the COVID-19 drug Remdesivir and its molecular dynamics with the human cell membrane (huge thanks to Lukas).
-                                We have made a <a href="https://mminnovationlab2020.blogspot.com/">blog</a>, detailing what we have found and done, with many useful documents.
-                                The overall <a href="./Projects/Innovation_Lab_2020_Report_Final_Version.pdf">report</a> pretty well summaries what the project is about.
-
+                                We have made a <a href="https://mminnovationlab2020.blogspot.com/">blog</a>, detailing what we have found and done, with many useful documents, such as guides, tutorials and case studies.
+                                The overall <a href="./Projects/Innovation_Lab_2020_Report_Final_Version.pdf">report</a> pretty well summaries what the project is all about.
                             </br>
                             Some documents I contributed to the project:</br>
                             - <a href="./Projects/lammps_guide.pdf">Installation guide for LAMMPS and other applications</a></br>
@@ -148,7 +147,7 @@
                             <table width="900" height="auto" border="0">
                                     <h3>Quantum Chemistry with an application in Drug Design</h3> 
                                     <br />
-                                    A project as a part of the Interdisciplinary Research Skills (IRS) module</a>.</br>
+                                    A project as a part of the Interdisciplinary Research Skills (IRS) module</a>.</br></br>
                                     <p style="text-align:center;"><a href="https://www.news.ucsb.edu/2019/019682/achieving-quantum-supremacy"><img src="./Projects/QuantumSupremacy-Eric-Lucero-Google.jpg" alt="quantcomp" width=300 height=200></a> 
                                     <a href = "https://www.profacgen.com/Quantum-Mechanics-Chemistry-in-Drug-Design.htm"><img src="./Projects/activesite.jpg" width=400 height=200> </a></p>
                                     <p class = "bodytxt"> 
