--- a/research.html
+++ b/research.html
@@ -46,7 +46,7 @@
             <td width="14" height="30"><a href="publications.html">Publications</a></td>
             </tr> -->
             <tr>
-            <td width="14" height="30"><a href="competition.html">Competition</a></td>
+            <td width="14" height="30"><a href="competition.html">Competitions</a></td>
             </tr>
             <tr>
             <td width="14" height="30"><a href="projects.html">Projects</a></td>
@@ -54,9 +54,9 @@
             <tr>
             <td width="14" height="30"><a href="notes.html">Notes</a></td>
             </tr>
-            <tr>
+            <!-- <tr>
             <td width="14" height="30"><a href="teaching.html">Teaching & Tutoring</a></td>
-            </tr>
+            </tr> -->
         </table>
         <footer>
             <div>
@@ -120,7 +120,7 @@
                                     Since Sir Issac Newton developed the foundations of mathematical physics, mathematics has been used extensively to model natural phenomenon. To investigate
                                     what nature does, equations have to be derived and solved, and so the fundamentals of physics are described using mathematics. The WPP implements a unique 
                                     approach to discover and explain the fundamental theory of physics in terms of graphs, hypergraphs, rules and computations, while conforming with modern mathematics. 
-                                    A very important principle to bear in mind is that <u>simple rules produces complex behaviours</u>. 
+                                    A very important principle to bear in mind is that <u>simple rules produce complex behaviours</u>. 
                                     For example, 
                                     cellular automaton has shown to demonstrate phase transistion behaviours in the 2D Ising Model (<a href="https://www.wolframscience.com/nks/notes-7-7--the-ising-model/">see link</a>), which closely relates to my project. My aim was to 
                                     find a rule that generates similar phase transistion behaviours, but in a 3-colored case.
@@ -131,7 +131,7 @@
                                     A general majority rule has been hypothesised and studied using grid cellular automata and Mathematica, in cases of 2 and 3 colors. 
                                 </br>
                                 </br>
-                                    Link for the report, posted on the Wolfram Community: <a href="https://community.wolfram.com/groups/-/m/t/2312007">https://community.wolfram.com/groups/-/m/t/2312007</a>
+                                    Link for the report, featured in Wolfram Community: <a href="https://community.wolfram.com/groups/-/m/t/2312007">https://community.wolfram.com/groups/-/m/t/2312007</a>
                                 </br></br>
                                 <!-- See Report</br>
                                 See Detailed Appendix</br>
@@ -161,7 +161,6 @@
                                         In the process, I have learnt the concepts of different ML methods, such as Support-Vector Machines and Recursive Neural Networks. 
                                         My team and I assisted in collecting data from some well known APIs. We also implemented pre-trained Natural Language Processing (NLP) models as a part of our training data.
                                         Python and Jupyter Notebooks are used throughout the project.
-
                                     </br></br>
                                     
                                     </p>
