--- a/notes_2_phy_MM3.html
+++ b/notes_2_phy_MM3.html
@@ -46,7 +46,7 @@
             <td width="14" height="30"><a href="publications.html">Publications</a></td>
             </tr> -->
             <tr>
-            <td width="14" height="30"><a href="competition.html">Competition</a></td>
+            <td width="14" height="30"><a href="competition.html">Competitions</a></td>
             </tr>
             <tr>
             <td width="14" height="30"><a href="projects.html">Projects</a></td>
@@ -54,9 +54,9 @@
             <tr>
             <td width="14" height="30"><a href="notes.html">Notes</a></td>
             </tr>
-            <tr>
+            <!-- <tr>
             <td width="14" height="30"><a href="teaching.html">Teaching & Tutoring</a></td>
-            </tr>
+            </tr> -->
         </table>
         <footer>
             <div>
