--- a/competition.html
+++ b/competition.html
@@ -139,7 +139,7 @@
                                 <p class = "bodytxt"> 
                                     Ardingly College: </br>
                                     Chemsitry Olympiad (hosted by the Royal Society of Chemistry) 
-                                    Physics Olympiad (hosted by the <a href="https://www.bpho.org.uk/">British Physis Olympiad</a>)</br> 
+                                    Physics Olympiad (hosted by the <a href="https://www.bpho.org.uk/">British Physics Olympiad</a>)</br> 
                                     Google Science Competition </br> 
                                     Interschool Football Competitions (3rd, 4th and 5th football teams)</br>
                                     Interhouse Music Competitions (Pianist)
