about me draft, add lit review project
add github icon in contacts, start about me page, do the banner

--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,7 @@
             <td width="14" height="30"><a href="publications.html">Publications</a></td>
             </tr> -->
             <tr>
-            <td width="14" height="30"><a href="competition.html">Competition</a></td>
+            <td width="14" height="30"><a href="competition.html">Competitions</a></td>
             </tr>
             <tr>
             <td width="14" height="30"><a href="projects.html">Projects</a></td>
@@ -60,7 +60,7 @@
         </table>
         <footer>
             <div>
-                <h5><strong>contact</strong></h5>
+                <h5><strong>contacts</strong></h5>
                 <li> <a href="mailto:ryanlaupakto2000@gmail.com">ryanlaupakto2000@gmail.com</a></li>
                 <li>
                     <a href="mailto:zcqsptl@ucl.ac.uk">zcqsptl@ucl.ac.uk</a>
