--- a/competition.html
+++ b/competition.html
@@ -60,7 +60,7 @@
         </table>
         <footer>
             <div>
-                <h5><strong>contact</strong></h5>
+                <h5><strong>contacts</strong></h5>
                 <a href="mailto:ryanlaupakto2000@gmail.com"><img src="./Pics/Gmail-Logo-700x394.png" alt="gmail" width="48" height="30"></a>
                 
                 <a href="mailto:zcqsptl@ucl.ac.uk"><img src="./Pics/Microsoft_Outlook-Logo.wine.png" alt="outlook" width="32" height="30"></a>
