added github logo

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
             <!-- <td width="14" height="30"><a href="teaching.html">Teaching & Tutoring</a></td> -->
             </tr>
         </table>
-        <footer>
-            <div>
-                <h5><strong>contacts</strong></h5>
-                <a href="mailto:ryanlaupakto2000@gmail.com"><img src="./Pics/Gmail-Logo-700x394.png" alt="gmail" width="48" height="30"></a>
-                
-                <a href="mailto:zcqsptl@ucl.ac.uk"><img src="./Pics/Microsoft_Outlook-Logo.wine.png" alt="outlook" width="32" height="30"></a>
-            </div>
-        </footer>	
+        <div>
+            <h5><strong>contacts</strong></h5>
+            <a href="mailto:ryanlaupakto2000@gmail.com"><img src="./Pics/Gmail-Logo-700x394.png" alt="gmail" width="48" height="30"></a>
+            &nbsp
+            <a href="mailto:zcqsptl@ucl.ac.uk"><img src="./Pics/Microsoft_Outlook-Logo.wine.png" alt="outlook" width="32" height="30"></a>
+            &nbsp&nbsp
+            <a href="https://github.com/SavitarRL"><img src="./Pics/GitHub-Mark-64px.png" alt="githubmark" width="35" height="35">
+        </div>
     </td>
 
     <td valign="top">
