--- a/projects.html
+++ b/projects.html
@@ -62,8 +62,10 @@
             <div>
                 <h5><strong>contacts</strong></h5>
                 <a href="mailto:ryanlaupakto2000@gmail.com"><img src="./Pics/Gmail-Logo-700x394.png" alt="gmail" width="48" height="30"></a>
-                
-                <a href="mailto:zcqsptl@ucl.ac.uk"><img src="./Pics/Microsoft_Outlook-Logo.wine.png" alt="outlook" width="32" height="30"></a>      
+                &nbsp
+                <a href="mailto:zcqsptl@ucl.ac.uk"><img src="./Pics/Microsoft_Outlook-Logo.wine.png" alt="outlook" width="32" height="30"></a>
+                &nbsp&nbsp
+                <a href="https://github.com/SavitarRL"><img src="./Pics/GitHub-Mark-64px.png" alt="githubmark" width="35" height="35">
             </div>
         </footer>	
     </td>
